<resources>
    <string name="app_name">Vallis</string>
    <string name="rules">Qoidalar</string>
    <string name="about">Default</string>
    <string name="share">Default</string>
    <string name="something">Something</string>
    <string name="do_kon_nomi">Дўкон номи</string>
    <string name="manzili">Манзили</string>
    <string name="mas_ul_shaxs_ismi">Масъул шахс исми</string>
    <string name="telefon_raqam_1_shartli">Телефон рақам 1 (шартли)</string>
    <string name="telefon_raqam_2">Телефон рақам 2</string>
    <string name="taxminiy_aylanma_miqdori_so_m">Тахминий айланма миқдори</string>
    <string name="location">Локация</string>
    <string name="rasm_tanlash">Расм танлаш</string>
    <string name="qo_shish">Қўшиш</string>
    <string name="haridor_qo_shish_oynasi">Ҳаридор қўшиш ойнаси</string>
    <string name="search_hint">Қидириш ...</string>
    <string name="cancel">Бекор қилиш</string>
    <string name="nomi">Номи:</string>
    <string name="qarzi">Қарзи:</string>
    <string name="barcha_kilentlar">Барча килентлар</string>
    <string name="qarzdor_kilentlar">Қарздор килентлар</string>
    <string name="qarzdor_bo_lmagan_kilentlar">Қарздор бўлмаган килентлар</string>
    <string name="tasdiqlash">Тасдиқлаш</string>
    <string name="ta_minotchi">Таъминотчи:</string>
    <string name="sotish">Сотиш</string>
    <string name="chegirmani_tanlang">Чегирмани танланг!</string>
    <string name="muddati">Муддати:</string>
    <string name="lokatsiyani_aniqlash">Локацияни аниқлаш</string>
    <string name="xaritadan_kerakli_joyni_markazga_keltiring">Харитадан керакли жойни марказга келтиринг!</string>
    <string name="haridor_nomi">Ҳаридор номи:</string>
    <string name="ma_sul_shaxs">Маъсул шахс:</string>
    <string name="telefon_raqami">Телефон рақами:</string>
    <string name="qarzdorlik">Қарздорлик:</string>
    <string name="statusi">Статуси:</string>
    <string name="miqdori">Миқдори</string>
    <string name="sotish_narxi">Сотиш нархи</string>
    <string name="narxi">Цена:</string>
    <string name="sanasi">Санаси:</string>
    <string name="mahsulot_nomi">Маҳсулот номи:</string>
    <string name="plan_miqdori">План миқдори:</string>
    <string name="bajarilgani">Бажарилгани:</string>
    <string name="muddat">Муддат:</string>
    <string name="batafsil">Батафсил</string>
    <string name="hisobot_matni">Ҳисобот матни:</string>
    <string name="tizimga_kirish">Тизимга кириш!</string>
    <string name="login">Логин</string>
    <string name="parol">Парол</string>
    <string name="mening_profilim">Менинг профилим</string>
    <string name="haridorlar_buyurtmasi">Ҳаридорлар буюртмаси</string>
    <string name="barcha_buyurtmalar">Барча буюртмалар</string>
    <string name="reja">Режа</string>
    <string name="hisobotlar">Ҳисоботлар</string>
    <string name="hisobot_yuborish">Ҳисобот юбориш</string>
    <string name="chiqish">Чиқиш</string>
    <string name="mahsulot_buyurtma_qilish_uchun_avval_mahsulotni_tanlang">Маҳсулот буюртма қилиш учун аввал маҳсулотни танланг!</string>
    <string name="sotilayotgan_mahsulot_ma_lumotlari">СОТИЛАЙОТГАН МАҲСУЛОТ МАЛУМОТЛАРИ!</string>
    <string name="buyurtma_olish">Буюртма олиш</string>
    <string name="text_my_info">Менинг малумотларим</string>
    <string name="hisobot_berish">Ҳисобот бериш</string>
    <string name="yuborish">Юбориш</string>
    <string name="client_add">Ҳаридор қўшиш</string>
    <string name="do_kon_turi">Дўкон тури</string>
    <string name="narx_turi">Нарх тури</string>
    <string name="orientir">Ориентир</string>
    <string name="direktor_ismi">Директор исми</string>
    <string name="tug_ilgan_sana">Туғилган сана</string>
    <string name="direktor_telefon_raqami">Директор телефон рақами</string>
    <string name="mas_ul_shaxs_telefon_raqami">Масъул шахс телефон рақами</string>
    <string name="inn">ИНН</string>
    <string name="mashrut">Машрут</string>
    <string name="hudud">Ҳудуд</string>
    <string name="miqdorini_kiriting">Миқдорини киритинг!</string>
    <string name="chegirma">Чегирма</string>
    <string name="savatchaga_qo_shish">Саватчага қўшиш</string>
    <string name="joyashuv">Жойлашув</string>
    <string name="kod">Код</string>
    <string name="ishxona_telefon">Ишхона телефон</string>
    <string name="target">Мўлжал</string>
    <string name="hisobot">Ҳисобот</string>
    <string name="to_lov">Тўлов</string>
    <string name="rasm_qo_shish">Расм қўшиш</string>
    <string name="qaysi_kilentlar">Қайси килентлар?</string>
    <string name="siz_tanlagan_joylashuv_aniqlandi">Сиз танлаган жойлашув аниқланди</string>
    <string name="hammasi">Ҳаммаси</string>
    <string name="tasdiqlanganlari">Тасдиқланганлари</string>
    <string name="faqat_shaxsiylari">Фақат шахсийлари</string>
    <string name="faqat_firmaniki">Фақат фирманики</string>
    <string name="agent">Агент</string>
    <string name="turi">Тури</string>
    <string name="tasdiqlanganmi">Тасдиқланганми</string>
    <string name="harajatlar">Ҳаражатлар</string>
    <string name="naqd">Нақд</string>
    <string name="enter_money">Суммани киритинг</string>
    <string name="karta_bilan">Карта билан</string>
    <string name="to_lash">Тўлаш</string>
    <string name="qo_shimcha">Қўшимча</string>
    <string name="komment">Коммент</string>
    <string name="yetib_borish_sanasi">Етиб бориш санаси</string>
    <string name="agent_ismi">Агент Исми:</string>
    <string name="agent_familyasi">Агент Фамиляси:</string>
    <string name="agent_nomeri">Агент Номери:</string>
    <string name="daromad">Даромади:</string>
    <string name="harajat">Ҳаражати:</string>
    <string name="oylik">Ойлик:</string>
    <string name="harajat_kiritish">Ҳаражат киритиш</string>
    <string name="shaxsiy_harajat">Шахсий ҳаражат</string>
    <string name="firma_harajat">Фирмани ҳаражати</string>
    <string name="harajat_nomi">Ҳаражат номи</string>
    <string name="izoh">Изоҳ</string>
    <string name="text_cost_amount">Ҳаражат миқдори</string>
    <string name="action_cost_amount">Ҳаражатни тўлаш</string>
    <string name="qaytgan_miqdor">Қайтган миқдор</string>
    <string name="qaytarish">Қайтариш</string>
    <string name="saqlangan_haridorlar">Сақланган ҳаридорлар</string>
    <string name="o_chirish">Ўчириш</string>
    <string name="birini_tanlang">Бирини танланг!</string>
    <string name="haridor_ma_lumotlarini_tahrirlash">Ҳаридор маълумотларини таҳрирлаш</string>
    <string name="saqlash">Сақлаш</string>
    <string name="priceDiscount">Чегирма: </string>
    <string name="choose_cat">Категорияни танланг</string>
    <string name="clear">Тозалаш</string>
    <string name="history">История</string>
    <string name="my_products">Махсулотларим</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">нархи</string>
</resources>