<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <TextView
        android:id="@+id/debtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/qaysi_kilentlar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debtTitle">


        <TextView
            android:id="@+id/allClients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/dialog_back"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/barcha_kilentlar"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/debtClients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/dialog_back"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/qarzdor_kilentlar"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/noDebtClients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/dialog_back"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/qarzdor_bo_lmagan_kilentlar"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>