<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/miqdorini_kiriting"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/returnedAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qaytgan_miqdor"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="#000"
                android:inputType="numberDecimal"
                android:textColorHint="#fff"
                android:textSize="18sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_height="wrap_content">



        </LinearLayout>

<!--        <RadioGroup-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:paddingLeft="16dp"-->
<!--            android:id="@+id/validationType"-->
<!--            android:paddingRight="16dp">-->

<!--            <RadioButton-->
<!--                android:checked="true"-->
<!--                android:id="@+id/radioValid"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Яроқли" />-->

<!--            <RadioButton-->
<!--                android:id="@+id/radioInvalid"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Яроқсиз" />-->


<!--        </RadioGroup>-->

        <TextView
            android:id="@+id/addAmountInput"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_contained_round"
            android:gravity="center"
            android:padding="8dp"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/qaytarish"
            android:textColor="@color/white" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>